hphp/test/zend/bad/ext/date/tests/date_default_timezone_set-1.php.skipif
<?php
if (substr(PHP_OS, 0, 3) == 'WIN') die('skip diff TZ detection on windows.');
?>